# sp_final

./: .gitignore  CMakeLists.txt  SPBPriorityQueue.c  SPConfig.c  SPConfig.h  SPKDArray.c  SPKDArray.h  SPKDArrayTest.make  SPKDTree.c  SPKDTree.h  SPKDTreeTest.make  SPLogger.c  SPLogger.h  SPPoint.c  SPPointTest.make  basicConfigTest.cnf  main.cpp  main_aux.cpp  main_aux.h  makefile  sp_config_unit_test.c  sp_kd_array_unit_test.c  sp_logger_unit_test.c  spcbir.config  unit_test_util.h
release/: SPBPriorityQueue.c  SPBPriorityQueue.h  SPBPriorityQueueTest.make  SPConfig.c  SPConfigTest.make  SPKDArray.c  SPKDArray.h  SPKDTree.c  SPPoint.c  SPPoint.h  main.cpp  main_aux.cpp  main_aux.h  makefile  partners.txt
release/unit_tests/: basicConfigTest.cnf  sp_config_unit_test.c  sp_kd_array_unit_test.c  sp_logger_unit_test.c  sp_point_unit_test.c
unit_tests/: makefile_old  sp_bpqueue_unit_test.c  sp_config_unit_test.c  sp_kd_array_unit_test.c  sp_kd_tree_unit_test.c  sp_logger_unit_test.c  sp_point_unit_test.c
